--- a/Dungeon/Dungeon.csproj
+++ b/Dungeon/Dungeon.csproj
@@ -42,6 +42,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Map\DungeonMap.cs" />
+    <Compile Include="Map\DungeonMinimap.cs" />
     <Compile Include="Map\Room.cs" />
     <Compile Include="Map\TileMap.cs" />
     <Compile Include="Map\TileMap2D.cs" />
