--- a/Dungeon/Dungeon.csproj
+++ b/Dungeon/Dungeon.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Map\DungeonMap.cs" />
     <Compile Include="Map\DungeonMinimap.cs" />
     <Compile Include="Map\Room.cs" />
+    <Compile Include="Map\RoomFactory.cs" />
     <Compile Include="Map\TileMap.cs" />
     <Compile Include="Map\TileMap2D.cs" />
     <Compile Include="Map\TileMap3D.cs" />
