--- a/Dungeon/Dungeon.csproj
+++ b/Dungeon/Dungeon.csproj
@@ -51,11 +51,13 @@
     <Compile Include="Map\TileMap3D.cs" />
     <Compile Include="Play.cs" />
     <Compile Include="PlayContentManager.cs" />
+    <Compile Include="RandomManager.cs" />
     <Compile Include="Utils\IsometricTools.cs" />
     <Compile Include="Utils\Services\GameServices.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Services\IContentService.cs" />
+    <Compile Include="Utils\Services\IRandomService.cs" />
     <Compile Include="Utils\Services\ISceneService.cs" />
     <Compile Include="Scenes\Scene.cs" />
     <Compile Include="Scenes\SceneManager.cs" />
